--- a/language/en-GB/plg_content_extravote.ini
+++ b/language/en-GB/plg_content_extravote.ini
@@ -14,6 +14,8 @@ PLG_CONTENT_EXTRAVOTE_FIELD_HALF_STARS_DESC="Enable half stars for rating"
 PLG_CONTENT_EXTRAVOTE_FIELD_HALF_STARS_LABEL="Enable Half Stars"
 PLG_CONTENT_EXTRAVOTE_FIELD_HIDE_IN_BLOG_DESC="Hide main content rating in blog views?"
 PLG_CONTENT_EXTRAVOTE_FIELD_HIDE_IN_BLOG_LABEL="Hide in blog views?"
+PLG_CONTENT_EXTRAVOTE_FIELD_HIDECAT_IN_BLOG_DESC="Hide category rating in blog viewsg"
+PLG_CONTENT_EXTRAVOTE_FIELD_HIDECAT_IN_BLOG_LABEL="Hide Category Vote ?"
 PLG_CONTENT_EXTRAVOTE_FIELD_INITIAL_HIDE_DESC="Hide Counter and Current Rating until the user votes"
 PLG_CONTENT_EXTRAVOTE_FIELD_INITIAL_HIDE_LABEL="Initially Hide Counter?"
 PLG_CONTENT_EXTRAVOTE_FIELD_LOAD_STYLESHEET_DESC="Load ExtraVote stylesheet"
