--- a/language/fr-FR/plg_content_extravote.ini
+++ b/language/fr-FR/plg_content_extravote.ini
@@ -14,6 +14,8 @@ PLG_CONTENT_EXTRAVOTE_FIELD_HALF_STARS_DESC="Activer ou non les votes avec des d
 PLG_CONTENT_EXTRAVOTE_FIELD_HALF_STARS_LABEL="Demi-étoiles ?"
 PLG_CONTENT_EXTRAVOTE_FIELD_HIDE_IN_BLOG_DESC="Cacher ou non les votes en vue blog"
 PLG_CONTENT_EXTRAVOTE_FIELD_HIDE_IN_BLOG_LABEL="Cacher en vue Blog ?"
+PLG_CONTENT_EXTRAVOTE_FIELD_HIDECAT_IN_BLOG_DESC="Cacher ou non les votes sur les catégories en vue blog"
+PLG_CONTENT_EXTRAVOTE_FIELD_HIDECAT_IN_BLOG_LABEL="Cacher Vote sur catégorie ?"
 PLG_CONTENT_EXTRAVOTE_FIELD_INITIAL_HIDE_DESC="Cacher ou non les votes tant que l'utilisateur n'a pas voté"
 PLG_CONTENT_EXTRAVOTE_FIELD_INITIAL_HIDE_LABEL="Cacher à l'init?"
 PLG_CONTENT_EXTRAVOTE_FIELD_LOAD_STYLESHEET_DESC="Charger ou non les styles ExtraVote"
