[Draft] Add a description

--- a/language/en-GB/plg_content_extravote.ini
+++ b/language/en-GB/plg_content_extravote.ini
@@ -75,6 +75,8 @@ PLG_CONTENT_EXTRAVOTE_RATING_35_OUT_OF_5="3.5 out of 5"
 PLG_CONTENT_EXTRAVOTE_RATING_40_OUT_OF_5="4 out of 5"
 PLG_CONTENT_EXTRAVOTE_RATING_45_OUT_OF_5="4.5 out of 5"
 PLG_CONTENT_EXTRAVOTE_RATING_50_OUT_OF_5="5 out of 5"
+PLG_CONTENT_EXTRAVOTE_FIELD_DESCRIPTION_LABEL="Description"
+PLG_CONTENT_EXTRAVOTE_FIELD_DESCRIPTION_DESC="Shows a description before the rating."
 PLG_CONTENT_EXTRAVOTE_FIELD_CUSTOM_CSS_LABEL="Custom CSS ?"
 PLG_CONTENT_EXTRAVOTE_FIELD_CUSTOM_CSS_DESC="Add some custom CSS, for example, to force display on the right side of the page, enter .extravote{float:right} "
 PLG_CONTENT_EXTRAVOTE_FIELD_ONE_LINE_LABEL="1 line "
