--- a/language/fr-FR/plg_content_extravote.ini
+++ b/language/fr-FR/plg_content_extravote.ini
@@ -75,6 +75,8 @@ PLG_CONTENT_EXTRAVOTE_RATING_35_OUT_OF_5="3.5 sur 5"
 PLG_CONTENT_EXTRAVOTE_RATING_40_OUT_OF_5="4 sur 5"
 PLG_CONTENT_EXTRAVOTE_RATING_45_OUT_OF_5="4.5 sur 5"
 PLG_CONTENT_EXTRAVOTE_RATING_50_OUT_OF_5="5 sur 5"
+PLG_CONTENT_EXTRAVOTE_FIELD_DESCRIPTION_LABEL="Description"
+PLG_CONTENT_EXTRAVOTE_FIELD_DESCRIPTION_DESC="Montre une description avant l'évaluation."
 PLG_CONTENT_EXTRAVOTE_FIELD_CUSTOM_CSS_LABEL="Custom CSS ?"
 PLG_CONTENT_EXTRAVOTE_FIELD_CUSTOM_CSS_DESC="Ajoutez une personnalisation du CSS, par exemple, pour forcer l'affichage à droite de la page, entrer .extravote{float:right} "
 PLG_CONTENT_EXTRAVOTE_FIELD_ONE_LINE_LABEL="1 ligne ?"
